# app/docs/swagger.json
@@ -99,6 +99,22 @@
                     "posts"
                 ],
                 "summary": "List all blog posts",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Page size",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -532,6 +548,23 @@
                 }
             }
         },
+        "model.PageMetadata": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "total_item": {
+                    "type": "integer"
+                },
+                "total_page": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.RegisterRequest": {
             "type": "object",
             "required": [
@@ -598,6 +631,9 @@
                 "errors": {},
                 "message": {
                     "type": "string"
+                },
+                "paging": {
+                    "$ref": "#/definitions/model.PageMetadata"
                 }
             }
         },
@@ -613,6 +649,9 @@
                 "errors": {},
                 "message": {
                     "type": "string"
+                },
+                "paging": {
+                    "$ref": "#/definitions/model.PageMetadata"
                 }
             }
         },
@@ -628,6 +667,9 @@
                 "errors": {},
                 "message": {
                     "type": "string"
+                },
+                "paging": {
+                    "$ref": "#/definitions/model.PageMetadata"
                 }
             }
         },
@@ -640,6 +682,9 @@
                 "errors": {},
                 "message": {
                     "type": "string"
+                },
+                "paging": {
+                    "$ref": "#/definitions/model.PageMetadata"
                 }
             }
         },
@@ -652,6 +697,9 @@
                 "errors": {},
                 "message": {
                     "type": "string"
+                },
+                "paging": {
+                    "$ref": "#/definitions/model.PageMetadata"
                 }
             }
         },
@@ -664,6 +712,9 @@
                 "errors": {},
                 "message": {
                     "type": "string"
+                },
+                "paging": {
+                    "$ref": "#/definitions/model.PageMetadata"
                 }
             }
         },
@@ -676,6 +727,9 @@
                 "errors": {},
                 "message": {
                     "type": "string"
+                },
+                "paging": {
+                    "$ref": "#/definitions/model.PageMetadata"
                 }
             }
         }
